maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:51: error: Int(0) does not take parameters
    setIndication(0,0,nextCase(0(0)))
                                ^